--- a/CSS/general.css
+++ b/CSS/general.css
@@ -9,3 +9,24 @@ html {
 h1 {
 	color:#FFF;	
 }
+
+.dino-list {
+	margin: 0;
+	padding: 0;
+	list-style-type: none;	
+}
+
+.dino-list li {
+	float: left;
+	width: 25%;	
+}
+
+.dino-list figure {
+	margin: 0;
+	padding: 0;
+}
+
+.dino-list img {
+	display: block;
+	width: 100%;
+}
